add edit from inlRailWay

--- a/WEB_UI/Areas/Directory/Views/Home/InlandRailway.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/InlandRailway.cshtml
@@ -91,9 +91,8 @@
         <div class="form-group row" style="margin-bottom:0.5rem">
             <label for="add_edit_railway" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_railway:</label>
             <div class="col-xl-7">
-                <input type="number" class="form-control col-xl-4" id="add_edit_railway_code" name="add_edit_railway_code">
-                <textarea class="form-control col-xl-8" id="add_edit_railway" name="add_edit_railway" placeholder=""></textarea>
-                @*<input type="text" class="form-control" id="add_edit_railway" name="add_edit_railway">*@
+                <input type="number" class="form-control col-xl-4" id="add_edit_railway_code" name="add_edit_railway_code" disabled>
+                <textarea class="form-control" id="add_edit_railway" name="add_edit_railway" placeholder="" style="height:8rem"></textarea>
                 <div class="invalid-feedback"></div>
             </div>
         </div>
