add edit form countrys + disable a.not

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -46,14 +46,14 @@
                             <li class="go-back"><a href="#0">Справочники ИДС</a></li>
                             <li class="see-all"><a href="#">Вагоны</a></li>
                             <li><a href='@Url.Action("Cars", "Home", new { Area = "Directory" })'>Карточка вагона</a></li>
-                            <li><a href="#">Страны</a></li>
-                            <li><a href="#">Род вагона</a></li>
-                            <li><a href="#">Тип вагона</a></li>
-                            <li><a href="#">Разметка по прибытию</a></li>
-                            <li><a href="#">Собственики</a></li>
-                            <li><a href="#">Операторы</a></li>
-                            <li><a href="#">Признаки собственности</a></li>
-                            <li><a href="#">Ограничения погрузки</a></li>
+                            <li><a href='@Url.Action("Countrys", "Home", new { Area = "Directory" })'>Страны</a></li>
+                            <li><a href="#" class="disabled">Род вагона</a></li>
+                            <li><a href="#" class="disabled">Тип вагона</a></li>
+                            <li><a href="#" class="disabled">Разметка по прибытию</a></li>
+                            <li><a href="#" class="disabled">Собственики</a></li>
+                            <li><a href="#" class="disabled">Операторы</a></li>
+                            <li><a href="#" class="disabled">Признаки собственности</a></li>
+                            <li><a href="#" class="disabled">Ограничения погрузки</a></li>
                         </ul>
                     </li>
                     <li class="has-children">
@@ -64,9 +64,9 @@
                             <li><a href='@Url.Action("Railway", "Home", new { Area = "Directory" })'>Железные дороги</a></li>
                             <li><a href='@Url.Action("InlandRailway", "Home", new { Area = "Directory" })'>Внутренние железные дороги</a></li>
                             <li><a href='@Url.Action("ExternalStation", "Home", new { Area = "Directory" })'>Внешние станции</a></li>
-                            <li><a href="#0">Пограничные пункты</a></li>
-                            <li><a href="#0">Грузоотправители</a></li>
-                            <li><a href="#0">Грузополучатели</a></li>
+                            <li><a href="#" class="disabled">Пограничные пункты</a></li>
+                            <li><a href="#" class="disabled">Грузоотправители</a></li>
+                            <li><a href='@Url.Action("Shipper", "Home", new { Area = "Directory" })'>Грузополучатели</a></li>
                         </ul>
                     </li>
                     <li class="has-children">
@@ -76,13 +76,13 @@
                             <li class="see-all"><a href="#">Грузы</a></li>
                             <li><a href='@Url.Action("Cargo", "Home", new { Area = "Directory" })'>Грузы</a></li>
                             <li><a href='@Url.Action("CargoGroup", "Home", new { Area = "Directory" })'>Группы грузов</a></li>
-                            <li><a href="#">Грузы ЕТ СНГ</a></li>
-                            <li><a href="#">Грузы ГНГ</a></li>
-                            <li><a href="#">Сертификационные данные</a></li>
-                            <li><a href="#">Коммерчиское сотояние грузов</a></li>
-                            <li><a href="#">Класы опасности</a></li>
-                            <li><a href="#">Плательщики по отправке</a></li>
-                            <li><a href="#">Плательщики по прибытию</a></li>
+                            <li><a href="#" class="disabled">Грузы ЕТ СНГ</a></li>
+                            <li><a href="#" class="disabled">Грузы ГНГ</a></li>
+                            <li><a href="#" class="disabled">Сертификационные данные</a></li>
+                            <li><a href="#" class="disabled">Коммерчиское сотояние грузов</a></li>
+                            <li><a href="#" class="disabled">Класы опасности</a></li>
+                            <li><a href="#" class="disabled">Плательщики по отправке</a></li>
+                            <li><a href="#" class="disabled">Плательщики по прибытию</a></li>
                         </ul>
                     </li>
                     <li class="has-children">
@@ -90,11 +90,11 @@
                         <ul class="is-hidden">
                             <li class="go-back"><a href="#0">Справочники ИДС</a></li>
                             <li class="see-all"><a href="#">Общие</a></li>
-                            <li><a href="#">Внутрение станции</a></li>
-                            <li><a href="#">Парки</a></li>
-                            <li><a href="#">Пути</a></li>
-                            <li><a href="#">Подразделения</a></li>
-                            <li><a href="#">Типы подразделений</a></li>
+                            <li><a href="#" class="disabled">Внутрение станции</a></li>
+                            <li><a href="#" class="disabled">Парки</a></li>
+                            <li><a href="#" class="disabled">Пути</a></li>
+                            <li><a href="#" class="disabled">Подразделения</a></li>
+                            <li><a href="#" class="disabled">Типы подразделений</a></li>
                         </ul>
                     </li>
                 </ul>
