--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -243,12 +243,9 @@
                                                                     <div class="invalid-feedback">
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-xl-1 mb-1 text-left">
+                                                                <div class="col-xl-1 mb-1 text-left" style="padding-top:1rem">
                                                                     <button type="button" class="btn btn-warning btn" id="detention_save" title="" data-mode="edit" data-edit="" data-form="transceiver">
                                                                         <i class="fa fa-save" aria-hidden="true"></i>
-                                                                    </button>
-                                                                    <button type="button" class="btn btn-danger btn" id="detention_close" title="" data-mode="edit" data-edit="" data-form="transceiver">
-                                                                        <i class="fa fa-close" aria-hidden="true"></i>
                                                                     </button>
                                                                 </div>
                                                             </div>
