--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -104,6 +104,7 @@
         </div>
     </div>
 </nav>
+<div><img width="100%" height="100%" src="~/Images/8m.png" /></div>
 <div class="alert" id="incoming-alert"></div>
 <div class="row">
     <div class="col-xl-12 mb-3 mt-2">
