add 2 field out cars del div 8 marta

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -78,7 +78,7 @@
         </div>
     </div>
 </nav>
-<div><img width="100%" height="100%" src="~/Images/8m.png" /></div>
+@*<div><img width="100%" height="100%" src="~/Images/8m.png" /></div>*@
 <div class="alert" id="outgoing-alert"></div>
 <div class="row">
     <div class="col-xl-12 mb-3 mt-2">
